# multi-stage-docker

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
tests/: test_addition.py
