[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Micah Victoria <micah.victoria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
my-script = "app.main:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
